<resources>
    <string name="app_name">RadioButtonHW</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="regularticket">Regular Ticket</string>
    <string name="childticket">Children Ticket</string>
    <string name="studentticket">Student Ticket</string>
    <string name="NumberOfSheets">Count :</string>
    <string name="confirn">Confirm</string>
    <string name="choose">Choose</string>
    <string name="ticketType">Ticket Type</string>
    <string name="close">Close</string>
    <string name="gender">Gender:</string>
    <string name="detail">Order:</string>
    <string name="totalCost">Total:</string>
</resources>


